data/derived/comb/progs/unify/prog8413.ml.out
Characters 281-364:
  | Thresh(v,w,x,y)  -> exprToString v ^ "<" ^ exprToString w ^ "?" ^ exprToString x ^ ":" ^ exprToString y;;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
